applications/vs-test/deployments.yaml
---        
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"k8s-app":"oauth2-proxy"},"name":"oauth2-proxy","namespace":"vanille-shop-production"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"k8s-app":"oauth2-proxy"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"annotations":{"kubectl.kubernetes.io/restartedAt":"2023-01-24T19:47:00Z"}, [...]
  creationTimestamp: "2024-09-08T18:42:54Z"
  generation: 1
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: vanille-shop-production
  resourceVersion: "134989127"
  uid: 7dc50b66-a329-4e24-ab4d-95e342de9461
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2023-01-24T19:47:00Z"
      creationTimestamp: null
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --http-address=0.0.0.0:4180
        - --provider=oidc
        - --cookie-expire=600000ms
        - --oidc-issuer-url=https://iam.vanille-shop.de/realms/VanilleShop
        - --email-domain=*
        - --pass-user-headers=true
        env:
        - name: OAUTH2_PROXY_CLIENT_ID
          value: vanilleshop
        - name: OAUTH2_PROXY_CLIENT_SECRET
          value: hsshJ4sPlNJVNxhnZ3mCpLlhaUygrzUA
        - name: OAUTH2_PROXY_COOKIE_SECRET
          value: ne6vXBta.mY_ZCoa
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.0
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 40Mi
          requests:
            cpu: 20m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-09-08T18:42:54Z"
    lastUpdateTime: "2024-09-08T18:42:57Z"
    message: ReplicaSet "oauth2-proxy-65989d796d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-10-27T08:41:06Z"
    lastUpdateTime: "2025-10-27T08:41:06Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "17"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"creationTimestamp":"2024-09-08T18:58:32Z","labels":{"app":"wawi"},"name":"wawi-deployment","namespace":"vanille-shop-production"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"wawi"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"wawi"}},"sp [...]
  creationTimestamp: "2024-09-08T18:58:32Z"
  generation: 61
  labels:
    app: wawi
    k8slens-edit-resource-version: v1
  name: wawi-deployment
  namespace: vanille-shop-production
  resourceVersion: "144406931"
  uid: 3320476f-3750-4e4e-9954-b38716e38cb9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wawi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wawi
    spec:
      containers:
      - args:
        - -jar
        - -Dlogging.config=/logback-spring.xml
        - /app.war
        command:
        - java
        env:
        - name: DE_DATENTRAUM_SW6_API_CLIENTID
          valueFrom:
            secretKeyRef:
              key: clientid
              name: sw6-secret
              optional: false
        - name: DE_DATENTRAUM_SW6_API_CLIENTSECRET
          valueFrom:
            secretKeyRef:
              key: clientsecret
              name: sw6-secret
              optional: false
        - name: DE_DATENTRAUM_MQTT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DE_DATENTRAUM_MQTT_PASSWORD
              name: vs-secrets
              optional: false
        - name: DE_DATENTRAUM_MQTT_USER
          valueFrom:
            secretKeyRef:
              key: DE_DATENTRAUM_MQTT_USER
              name: vs-secrets
              optional: false
        - name: MAIL_SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MAIL_SMTP_PASSWORD
              name: vs-secrets
              optional: false
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: SPRING_DATASOURCE_PASSWORD
              name: vs-secrets
              optional: false
        - name: SPRING_DATASOURCE_URL
          valueFrom:
            secretKeyRef:
              key: SPRING_DATASOURCE_URL
              name: vs-secrets
              optional: false
        - name: SPRING_DATASOURCE_USERNAME
          valueFrom:
            secretKeyRef:
              key: SPRING_DATASOURCE_USERNAME
              name: vs-secrets
              optional: false
        envFrom:
        - configMapRef:
            name: wawi-config
        image: harbor.hachmann.hamburg/vanilleshop/wawi:1.7.6
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 5
        name: wawi
        ports:
        - containerPort: 9080
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /logback-spring.xml
          name: logback-config-volume
          subPath: logback.xml
        - mountPath: /var/wawi-files
          name: file-volume
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: private-docker-registry-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: file-volume
        persistentVolumeClaim:
          claimName: vs-documents
      - configMap:
          defaultMode: 420
          name: vanilleshop-logback-config
        name: logback-config-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-09-08T18:58:32Z"
    lastUpdateTime: "2025-08-26T20:27:33Z"
    message: ReplicaSet "wawi-deployment-5f4bd96b49" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-11-26T20:30:00Z"
    lastUpdateTime: "2025-11-26T20:30:00Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 61
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
